# maker-of-decisions

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE.md  Makefile  Makefile-old  README.md  bearing.h  bearing_cc.cpp  bearing_helper.cpp  bearing_mle.cpp  commander.cpp  commander.h  commands.csv  commands_line.csv  commands_old.csv  common.h  common_include.h  common_vars.h  config.cfg  dirk_thread.cpp  dirk_thread.h  hunting_thread.cpp  hunting_thread.h  mav_struct.h  mean_cc.csv  mod  mod.cpp  mod.h  mod_naive.sh  mod_startup.sh  obs_model.csv  port_setup.cpp  port_setup.h  read_thread.cpp  read_thread.h  rfdetector_thread.cpp  rfdetector_thread.h  (+20 more)
bearing_lib/: bearing.h  bearing_cc.cpp  bearing_max.cpp  bearing_max3.cpp
commands/: box50.csv  box75.csv  command_standing.csv  commands.csv  commands_box.csv  commands_complex.csv  commands_old.csv  east_line.csv  grid9.csv  gridv2.csv  nw_line.csv  se_line.csv  sg9_s0.csv  sg9_s1.csv  sg9_s2.csv  sg9_s3.csv  sparse_grid1.csv  sparse_grid9_9.csv  sw_line.csv  west_line.csv  westline20.csv
libs/bearing/: CMakeLists.txt  bearing_max.cpp  bearing_max3.cpp
libs/serial/: CMakeLists.txt  mavlink_serial.cpp  mavlink_serial.h  serial_port.cpp  serial_port.h  system_ids.h  wifly_serial.cpp  wifly_serial.h
libs/udp/: CMakeLists.txt  udp.cpp  udp.h
mavlink/jager/: jager.h  mavlink.h  testsuite.h  version.h
planner/: CMakeLists.txt  a.out  belief.cpp  planner_commander.cpp  planner_commander.h  pomdp.cpp  pomdp.h  pomdp_math.cpp  pomdpfile.txt  temp.cpp  test.cpp  test2.cpp
planners/: fixed_planner.cpp  fixed_planner.h  naive_planner.cpp  naive_planner.h  planner.cpp  planner.h
policyExecution/: a.out  beliefs.c  constants.h  dynamics.c  generateCMD.c  main.c  makefile  mymath.c  observations.c  policy.c  policyExecution.h  test.xml
sensors/: rf_detector.cpp  rf_detector.h
serial_lib/: mavlink_serial.cpp  mavlink_serial.h  mavlink_serial_class.cpp  mavlink_serial_class.h  serial_port.cpp  serial_port.h  serial_port_class.cpp  serial_port_class.h  wifly_serial.cpp  wifly_serial.h  wifly_serial_class.cpp  wifly_serial_class.h
udp_lib/: udp.h
